DBC handler and datacontainer modified pathchanger defined

--- a/tableViewtest/CMakeLists.txt
+++ b/tableViewtest/CMakeLists.txt
@@ -20,8 +20,8 @@ set(PROJECT_SOURCES
         tablemodel.h
         datacontainer.cpp
         datacontainer.h
-        aschandler.cpp
-        aschandler.h
+        DBChandler.cpp
+        DBChandler.h
         qml.qrc
 )
 
