qml interface first draft

--- a/QML_Lesson11_QMLCppIntegration/CMakeLists.txt
+++ b/QML_Lesson11_QMLCppIntegration/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(tableViewtest VERSION 0.1 LANGUAGES CXX)
+project(QML_Lesson11_QMLCppIntegration VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -16,43 +16,41 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Quick)
 find_package(Qt6 REQUIRED COMPONENTS QuickControls2)
 
 set(PROJECT_SOURCES
-        main.cpp
-        tablemodel.cpp
-        tablemodel.h
-        datacontainer.cpp
-        datacontainer.h
-        DBChandler.cpp
-        DBChandler.h
-        qml.qrc
+    main.cpp
+    SomeClass.cpp
+    SomeClass.h
+
+    qml.qrc
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(tableViewtest
+    qt_add_executable(QML_Lesson11_QMLCppIntegration
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET tableViewtest APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET QML_Lesson11_QMLCppIntegration APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(tableViewtest SHARED
+        add_library(QML_Lesson11_QMLCppIntegration SHARED
             ${PROJECT_SOURCES}
         )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-    else()
-        add_executable(tableViewtest
-          ${PROJECT_SOURCES}
-        )
-    endif()
+    # Define properties for Android with Qt 5 after find_package() calls as:
+    #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
+else()
+    add_executable(QML_Lesson11_QMLCppIntegration
+        ${PROJECT_SOURCES}
+    )
+endif()
 endif()
 
-target_link_libraries(tableViewtest
-  PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Quick)
+target_link_libraries(QML_Lesson11_QMLCppIntegration
+    PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Quick)
 
-set_target_properties(tableViewtest PROPERTIES
+
+set_target_properties(QML_Lesson11_QMLCppIntegration PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -60,11 +58,11 @@ set_target_properties(tableViewtest PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-install(TARGETS tableViewtest
+install(TARGETS QML_Lesson11_QMLCppIntegration
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_import_qml_plugins(tableViewtest)
-    qt_finalize_executable(tableViewtest)
+    qt_import_qml_plugins(QML_Lesson11_QMLCppIntegration)
+    qt_finalize_executable(QML_Lesson11_QMLCppIntegration)
 endif()
