--- a/tableViewtest/CMakeLists.txt
+++ b/tableViewtest/CMakeLists.txt
@@ -14,6 +14,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Quick)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Quick)
 find_package(Qt6 REQUIRED COMPONENTS QuickControls2)
+find_package(Qt6 REQUIRED COMPONENTS Xml)
 set(PROJECT_SOURCES
         main.cpp
         tablemodel.cpp
@@ -50,6 +51,7 @@ endif()
 
 target_link_libraries(tableViewtest
   PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Quick)
+target_link_libraries(tableViewtest PRIVATE Qt6::Xml)
 
 set_target_properties(tableViewtest PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
